--- a/Packages/com.odu.designpatterns/Runtime/Odu.DesignPatterns.asmdef
+++ b/Packages/com.odu.designpatterns/Runtime/Odu.DesignPatterns.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "Odu.DesignPatterns"
+    "name": "Odu.DesignPatterns",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
